@startuml
skin rose
!pragma useIntermediatePackages false
left to right direction

package Models {
    class Arriendo{
        -rutCliene: String
        -patenteVehiculo String
        -fechaDeInicio: String
        -fechaDeTermino: String
        +Arriendo( fechaDeInicio: String, fechaDeTermino: String, patenteVehiculo: String, rutCliente: String)
        +getFechaDeInicio(): String
        +getFechaDeTermino():String
        +getPatenteVehiculo(): String
        +getRutCliente(): String
        +getListaCliente(): ListaCliente
        +getListaVehiculo(): ListaVehiculo

    }

    class ListaArriendo{
        -cantidadArriendo: int
        -cantidadMaxima:int
        -cantidadDiasArrendado: int
        +ListaCliente(cantidadMaxima: int)
        +desplegar(cantidadArriendo: int): boolean
        +agregar(arriendo: Arriendo): boolean
        +devolver(vehiculo: Vehiculo): boolean
        +eliminar(rutCliente: String): boolean
        +obtener(posicion: int): Arriendo
        +getCantidadArriendo(): int

    }

    class Cliente {
        -rut: String
        -nombre: String
        -apellido: String
        -fechaDeNacimiento: String
        -tipoDeLicencia: String
        +Cliente(rut: String, nombre: String, tipoDeLicencia: String, fechaDeNacimiento: String, apellido: String)
        +getRut(): String
        +getNombre(): String
        +getApellido(): String
        +getTipoDeLicencia(): String
        +getFechaDeNacimiento(): String

    }

    class ListaCliente{
        -canidadCliente: int
        -cantidadMaxima: int
        +ListaCliente(cantidadMaxima: int)
        +inscribir(cliente: Cliente):boolean
        +obtener(posicion: int): Cliente
        +eliminar(rut: String):boolean
        +buscar(rut: String): Cliente
        +buscar(tipoDeLicencia: String): Cliente
        +getCantidadMaxima(): int
        +getCantidadCliente(): int
    }

    class Vehiculo{
        -patente: String
        -numeroDeRuedas: int
        -tipoDeVehiculo: String
        -numeroDeAsientos: int
        -estado: String
        +Vehiculo(patente: String, numeroDeRuedas: int, tipoDeVehiculo: String, numeroDeAsientos: int, estado: String)
        +getPatente(): String
        +getNumeroDeRuedas(): int
        +getTipoDeVehiculo(): String
        +getNumeroDeAsientos(): int
        +getEstado(): String
    }

    class ListaVehiculo{
        -cantiadVehiculo: int
        -cantidadMaxima: int
        +ListaVehiculo(cantidadMaxima: int)
        +getCantidadMaxima(): int
        +inscribir(vehiculo: Vehiculo): boolean
        +obtener(posicion: int): Vehiculo
        +eliminar(patente: String): boolean
        +buscar(patente: String): Vehiculo
        +buscar(tipoDeVehiculo; String): Vehiculo
        +buscar(estado: String): Vehiculo
    }
}

package Services {
    interface Sistema{
        +cargarArchivoCliente(nombreArchivo: String): boolean
        +inscribirCliente(rut: String, nombre: String, apellido: String, fechaDeNacimiento: String): boolean
        +cargarArchivoVehiculo(nombreArchivo: String): boolean
        +inscribirVehiculo(patente: String, numeroDeRuedas: int, numeroDeAsientos: int, tipoDeVehiculo: String, estado: String): boolean
        +cargarArchivoArriendo(nombreArchivo: String): boolean
        +registrarArriendo(patenteDeVehiculo: String, rutCliente: String, cantidadDiasArrendado: int): boolean
        +devolucionDeVehiculo(rutCliente: String): String[]
        +desplegarEstadisticas(): String[]
        +guardarArchivos(): void
    }

    class SistemaImpl{
        +SistemaImpl(cantidadDiasArrendado: int, patenteDeVehiculo: String, rutCliente: String)

    }
}



Sistema <|.. SistemaImpl
SistemaImpl *--> ListaArriendo: -listaArriendo: Arriendo[]
SistemaImpl *--> ListaCliente: -listaCliente: Cliente[]
SistemaImpl*--> ListaVehiculo: -listaVehiculo: Vehiculo[]


ListaArriendo o--> Arriendo: -listaArriendo: Arriendo[]
ListaCliente o--> "0..*"Cliente: -listaCliente: Cliente[]
ListaVehiculo o--> Vehiculo: -listaVehiculo: Vehiculo[]
Arriendo *--> ListaCliente: -listaCliente: Cliente
Arriendo *--> ListaVehiculo: -listaVehiculo: Vehiculo

@enduml